--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,8 @@
     <string name="atom_description">Atomize\n=======\n\n\nSummary\n--------------\nAtomize is the simplest PNG image compression app available for Android 5.0 and up. Developed by Team Wrmndfzzy, Atomize can shrink
         the file size of an image significantly, often by as much as by 70%, and maintains an image\'s transparency with little to no loss in quality.\n\n\nInstructions\n------------------\nSimply select a PNG image,
         check the preview to confirm you selected the correct image, and press Atomize! The compression process can take up to a few minutes on low end devices, but should complete within seconds on relatively modern
-        spec devices.\n\n\nTheory\n-----------\nSimilar to desktop compression programs such as Pngyu, PNGoo, and ImageAlpha, Atomize is simply a front-end for the pngquant lossy compression binary.</string>
+        spec devices.\n\n\nTheory\n-----------\nSimilar to desktop compression programs such as Pngyu, PNGoo, and ImageAlpha, Atomize is simply a front-end for the pngquant lossy compression binary.\n\n\nRelease Version: 1.0.0</string>
+
+    <string name="settingsactivity_label">Settings</string>
 
 </resources>
